fix responsive on mobile

--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -1,6 +1,13 @@
 .sidebar-container {
     display: flex;
     flex-direction: row;
+
+    
+    #micro.sidebar-item, #plus-camera.sidebar-item, #notification.sidebar-item{
+        @media screen and (max-width: 500px) {
+            display: none;
+        }
+    }
 }
 
 .sidebar-item {
@@ -15,6 +22,7 @@
     color: #f1f1f1;
     cursor: pointer;
     margin-right: 8px;
+
 }
 
 .sidebar-item:hover {
